# kiji-inspector

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  README_PATCH.md  apply-patch.sh  pyproject.toml  revert-patch.sh
.github/workflows/: ci-core.yml  ci-extras.yml  lint-and-test.yml  publish-kiji-inspector.yml  publish-kiji-sae.yml
demo/: home_repair_demo.py  investment_demo.py  investment_demo_streamlit.py  investment_demo_ui.py
demo/home_repair/: home_repair.json  home_repair_demo.py  index.html
demo/web_demo/: app.py  index.html  index_old.html
docs/: generate_pdf.sh  index.md  pair_generation.md  step1_activation_extraction.md  step1_contrastive_pair_generation.md  step2_activation_extraction.md  step2_sae_training.md  step3_contrastive_activation_analysis.md  step3_sae_training.md  step4_contrastive_activation_analysis.md  step4_feature_interpretation.md  step5_feature_interpretation.md  step5_fuzzing_evaluation.md  step6_fuzzing_evaluation.md
paper/: Opening the Black Box Mechanistic Interpretability of Agent Tool Selection with Sparse Autoencoders.tex  Opening the Black Box Mechanistic Interpretability of Agent Tool Selection with Sparse Autoencoders_short.tex  README.md  build.sh  generate_charts.py  paper.tex  references.bib  render_svgs.py
paper/results/: ablation_report_v1.json  ablation_report_v2.json
patches/: 0001-patch-venv.mbox.patch  01_allow_extract_hidden_states.patch  02_support_nemotron_models.patch  README_PATCH.md  apply-patch.sh  extract-hiddenstates-gemma3-nemotron.patch  patch-venv.patch  vllm-0.19rc1-gemma4-hidden-states.patch
patches/0.19/: 03_support_gemma3_models.patch  README_PATCH.md  apply-patch.sh
patches/0.20.1/: apply_patch.sh  vllm-0.20.1-gemma4-hidden-states.patch
presentation/: Opening the Black Box Mechanistic Interpretability of Agent Tool Selection with Sparse Autoencoders.md  Opening the Black Box Mechanistic Interpretability of Agent Tool Selection with Sparse Autoencoders.pptx  README.md  theme.css
sae-inference-server/: README.md  pyproject.toml
sae-inference-server/app/: config.py  dependencies.py  main.py  schemas.py
sae-inference-server/assets/: feature_descriptions.json  sample_response.json
samples/: debug_few_sae.py  test_few_sae.py
scenarios/: customer_support.json  investment.json  manufacturing.json  supply_chain.json  tool_selection.json
src/: ablation.py  activation_extractor.py  baselines.py  extractor.py  feature_interpreter.py  fuzzing_evaluator.py  generate_pairs.py  generate_training_set.py  generator.py  layer_sweep.py  pipeline.py  sae_trainer.py  scenario.py
src/analysis/: __init__.py  contrastive_features.py  feature_interpreter.py  fuzzing_evaluator.py
src/data/: __init__.py  generator.py  pair_stats.py  scenario.py
src/experiments/: ablation.py  baselines.py  layer_sweep.py
src/extraction/: __init__.py  activation_extractor.py  extractor.py  vllm_activation_extractor.py
src/huggingface/: download_pairs.py  upload_pairs.py  upload_sae.py
src/kiji_inspector/: __init__.py  generate_pairs.py  generate_pairs_doubleword.py  pipeline.py  sae.py
src/kiji_inspector/analysis/: __init__.py  contrastive_features.py  feature_interpreter.py  fuzzing_evaluator.py
src/kiji_inspector/core/: __init__.py  registry.py  sae.py  sae_core.py
src/kiji_inspector/data/: __init__.py  contrastive_dataset.py  generator.py  pair_stats.py  scenario.py
src/kiji_inspector/experiments/: ablation.py  baselines.py  layer_sweep.py
src/kiji_inspector/extraction/: __init__.py  activation_extractor.py  extractor.py  vllm_activation_extractor.py
src/kiji_inspector/huggingface/: download_pairs.py  relabel_sae.py  upload_pairs.py  upload_sae.py
src/kiji_inspector/training/: __init__.py  model.py  trainer.py
src/kiji_inspector/utils/: __init__.py  find_optimal_extraction.py  stats.py
src/sae/: __init__.py  model.py  trainer.py
src/utils/: __init__.py  find_optimal_extraction.py
tests/: test_activation_extractors.py  test_core_registry.py  test_core_sae.py  test_runtime_api.py  test_train_smoke.py
utils/: count_features.py  pair_stats.py  show_pairs.py
vllm-with-explanations/: Dockerfile  README.md  activation_processor_sidecar.py  docker-entrypoint.sh  main.py  pyproject.toml  serve_activation_processor.sh  serve_gemma4_activations.sh
web-app/: main.py  pyproject.toml
web-app/app/: __init__.py  config.py  dependencies.py
web-app/app/api/: routes.py
web-app/app/services/: sae_inference.py
