[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiji-inspector"
version = "0.0.3"
description = "Kiji Inspector"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
authors = [
    {name = "575 Lab - Dataiku's Open Source Office", email = "opensource@dataiku.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch>=2.10",
    "torchvision>=0.25",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "datasets>=3.0.0",
    "accelerate>=1.12.0",
    "transformers>=4.57.6",
]

[project.optional-dependencies]
# Mamba/NemotronH support — requires source build on aarch64 (GB200):
#   uv pip install flash-linear-attention causal-conv1d mamba-ssm --no-build-isolation
mamba = [
    "flash-linear-attention>=0.4.1 ; sys_platform == 'linux'",
    "causal-conv1d ; sys_platform == 'linux'",
    "mamba-ssm ; sys_platform == 'linux'",
]
# flash-attn: install manually for your CUDA/torch version:
#   Blackwell (SM 100): uv pip install https://github.com/Dao-AILab/flash-attention/releases/download/fa4-v4.0.0.beta2/flash_attn4-4.0.0b2-py3-none-any.whl
#   Hopper (SM 90):     uv pip install flash-attn-3 --no-build-isolation
hf = [
    "huggingface-hub>=0.20",
]
full = [
    "kiji-inspector[mamba,hf]",
    "vllm>=0.11.0",
    "flash-attn-3 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kiji_inspector*"]

[tool.setuptools.package-data]
kiji_inspector = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "kiji-inspector-v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_start_rev = "kiji-inspector-v0.0.1"

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'darwin'",
]

# Override vllm's torch==2.10.0+cpu requirement — we use the CUDA build
override-dependencies = [
    "torch>=2.10.0",
]

# vllm and CUDA-dependent packages: build against the venv's CUDA torch,
# not the CPU torch that build isolation would pull from PyPI
no-build-isolation-package = ["causal-conv1d", "mamba-ssm", "flash-linear-attention"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "flash-attn-3-wheels"
url = "https://windreamer.github.io/flash-attention3-wheels/cu130_torch2100"
format = "flat"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
vllm = { path = "../vllm", editable = true }
flash-attn-3 = { index = "flash-attn-3-wheels", marker = "sys_platform == 'linux'" }
causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1+cu13torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
mamba-ssm = { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1+cu13torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" }
