[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiji-inspector"
version = "0.0.3"
description = "Kiji Inspector"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "Apache 2.0"}
authors = [
    {name = "575 Lab - Dataiku's Open Source Office", email = "opensource@dataiku.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "datasets>=3.0.0",
    "huggingface-hub>=1.13.0",
]

[project.optional-dependencies]
full = [
    "transformers>=5.0.0",
    "accelerate>=1.13.0",
    "vllm==0.20.1"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kiji_inspector*"]

[tool.setuptools.package-data]
kiji_inspector = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "kiji-inspector-v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_start_rev = "kiji-inspector-v0.0.1"


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
